@@ -1,3 +1,8 @@
+Thu Jun 30 17:25:08 2011  Koichi Sasada  <ko1@atdot.net>
+
+	* thread_pthread.c (ping_signal_thread_list, thread_timer): 
+	  fix to keep polling state if there are any ping-tasks.
+
 Thu Jun 30 12:25:34 2011  Koichi Sasada  <ko1@atdot.net>
 
 	* thread_pthread.c (rb_thread_create_timer_thread): allocate
